style: fix long link on mobile, page Repositories

--- a/src/Pages/Repositories/style.less
+++ b/src/Pages/Repositories/style.less
@@ -11,6 +11,7 @@
     background-color: rgba(255,255,255,0.04);
     transition: background-color .3s linear;
     margin-right: 20px;
+    word-break: break-all;
     
     &:hover {
       background-color: rgba(255,255,255,0.09);
